Minor edits to the Provisioning Hosts and Virtual Machines guide during peer review.

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/Fulfilling_Requests.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/Fulfilling_Requests.adoc
@@ -42,7 +42,7 @@ Quotas allow you to establish maximum usage thresholds for an owner or group for
 This example uses the +Cloud+ Namespace, but can also use the +Infrastructure+ namespace.
 ====== 
 +
-. Click image:1847.png[]+(Configuration)+, image:1851.png[]+(Edit this instance)+.
+. Click image:1847.png[](+Configuration+), image:1851.png[](+Edit this instance+).
 image:6279.png[]
 +
 * Set the values for +Owner Max CPUs Allowed+, +Owner -- Max Memory Allowed+, or +Owner -- Max Storage Allowed+ to be the maximums for a specific owner.
@@ -68,7 +68,7 @@ Quota tags can be assigned directly to +either+ a group or owner +not+ to a conf
 
 . Click +Configure → Configuration+.
 . Click the +Access Control+ accordion, and select the user or group that you want to tag.
-. Click image:1941.png[]+(Policy)+, then click image:2158.png[]+(Edit Tags)+.
+. Click image:1941.png[](+Policy+), then click image:2158.png[](+Edit Tags+).
 . Select the appropriate customer tag to assign, then the value.
 . Click +Save+.
 
