--- a/doc-Provisioning_Virtual_Machines_and_Hosts/Working_with_Requests.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/Working_with_Requests.adoc
@@ -118,7 +118,7 @@ CloudForms Management Engine provides tags that can be used to set default autom
 
 . Navigate to +Infrastructure → Virtual Machines+.
 . Click the +Templates+ accordion, and select the templates that you want to tag.
-. Click image:1941.png[]+(Policy)+, and then image:2158.png[]+(Edit Tags)+.
+. Click image:1941.png[](+Policy+), and then image:2158.png[](+Edit Tags+).
 . Select a customer tag from the first dropdown, and then a value for the tag.
 
 The thresholds for automatic approval for a specific template are set. The next time a provision request is created for this template these thresholds will be checked. If the requirements are met, the provisioning request will be approved with no user intervention.
@@ -138,7 +138,7 @@ This example uses the +Cloud+ Namespace, but can also use the +Infrastructure+ n
 ======
 +
 . Select an instance within the chosen class.
-. Click image:1847.png[]+(Configuration)+, then image:1851.png[]+(Edit this instance)+.
+. Click image:1847.png[](+Configuration+), then image:1851.png[](+Edit this instance+).
 . Type the desired email addresses in the +to_email_address+ and +from_email_address+ fields.
 . Click +Save+.
 image:6282.png[]
