Minor edits to the Deployment Planning Guide during peer review.

--- a/doc-Deployment_Planning_Guide/Introduction_to_Red_Hat_CloudForms.adoc
+++ b/doc-Deployment_Planning_Guide/Introduction_to_Red_Hat_CloudForms.adoc
@@ -17,6 +17,7 @@ The diagram below describes the capabilities of CloudForms Management Engine. It
 image:1845.png[]
 
 The architecture comprises the following components:
+
 * The CloudForms Management Engine Appliance (Appliance) which is supplied as a secure, high-performance, preconfigured virtual machine. It provides support for HTTPS communications.
 * The CloudForms Management Engine Server (Server) resides on the Appliance. It is the software layer that communicates between the SmartProxy and the Virtual Management Database.
 It includes support for HTTPS communications.
@@ -30,6 +31,7 @@ Each storage location must have a SmartProxy with visibility to it. The SmartPro
 === Requirements
 
 To use CloudForms Management Engine, the following requirements must be met:
+
 * One of the following web browsers:
 ** Mozilla Firefox for versions supported under Mozilla's Extended Support Release (ESR) 
 ** Internet Explorer 8 or higher
@@ -42,7 +44,7 @@ To use CloudForms Management Engine, the following requirements must be met:
 
 [IMPORTANT]
 =======
- Due to browser limitations, Red Hat supports logging in to only one tab for each multi-tabbed browser. Console settings are saved for the active tab only. For the same reason, CloudForms Management Engine does not guarantee that the browser's +Back+ button will produce the desired results. Red Hat recommends using the breadcrumbs provided in the Console.
+Due to browser limitations, Red Hat supports logging in to only one tab for each multi-tabbed browser. Console settings are saved for the active tab only. For the same reason, CloudForms Management Engine does not guarantee that the browser's +Back+ button will produce the desired results. Red Hat recommends using the breadcrumbs provided in the Console.
 =======
 
 === Terminology
@@ -109,7 +111,7 @@ Repository:: A place on a datastore resource which contains virtual machines.
 				
 SmartProxy:: The SmartProxy is a software agent that acts on behalf of the CloudForms Management Engine Appliance to perform actions on hosts, providers, storage and virtual machines.
 
-The SmartProxy can be configured to reside on the CloudForms Management Engine Appliance or on an ESX server version.
+:: The SmartProxy can be configured to reside on the CloudForms Management Engine Appliance or on an ESX server version.
 The SmartProxy can be deployed from the CloudForms Management Engine Appliance, and provides visibility to the VMFS storage. Each storage location must have a SmartProxy with visibility to it.
 The SmartProxy acts on behalf of the CloudForms Management Engine Appliance. If the SmartProxy is not embedded in the CloudForms Management Engine server, it communicates with the CloudForms Management Engine Appliance over HTTPS on standard port 443.
 
