--- a/doc-Deployment_Planning_Guide/master.adoc
+++ b/doc-Deployment_Planning_Guide/master.adoc
@@ -11,3 +11,4 @@ CloudForms Documentation Team <cloudforms-docs@redhat.com>
 include::Introduction_to_Red_Hat_CloudForms.adoc[]
 include::Planning.adoc[]
 include::Security.adoc[]
+include::Capacity.adoc[]
