[api docs] v2.1.0 Documentation
- Updated Version History, Included high level description of what changed in v2.1.0
- Updated Primary Collections reference to include the new collections
- Enhanced Authentication page to discuss about --request_type=ui
- Added page for REST API Authorization, Discuss the need for and usage of X-MIQ-Group
- Added Tenants reference and mentioned tenants support in tagging
- Support for Reports: Report and Report result querying, Running Reports, Importing Reports
- Adding CRUD for Categories and Tags
- Adding Roles Management: Querying roles and features, CRUD on roles, Assigning and Unassigning features to roles
- User password updates: Ability to update users's password
- Setting Ownerships: "set_ownership" action, examples of owner and group specification
- Chargebacks and Rates: Queries, CRUD Reference and Examples for Rates
- Service enhancements: Additional queries, Custom button and button group support with related actions
- Service enhancements: Triggering custom actions, added custom action example
- Updated Provider types, added mapping tables for v2.0.0 types to v2.1.0 types.
- Listing required/optional attributes when creating resources in appendix
- Updated authentication attribute for OpenShift ContainerManager provider
- Moving Examples to seperate Topic for easier browsing of examples by category

--- a/api/examples/delete_vm.adoc
+++ b/api/examples/delete_vm.adoc
@@ -26,9 +26,8 @@ DELETE /api/vms
 {
   "action" : "delete",
   "resources" : [
-    "href" : "http://localhost:3000/api/vms/348",
-    "href" : "http://localhost:3000/api/vms/349",
-    "href" : "http://localhost:3000/api/vms/3"
+    { "href" : "http://localhost:3000/api/vms/348" },
+    { "href" : "http://localhost:3000/api/vms/349" }
   ]
 }
 ----
