--- a/api/reference/policies.adoc
+++ b/api/reference/policies.adoc
@@ -40,7 +40,7 @@ and posting *assign* or *unassign* actions to the policy_profiles subcollection.
 * link:#querying-policies[Querying Policies]
 * link:#querying-policies-of-resources[Querying Policies of a Resource]
 * link:#policy-actions[Policy and Policy Profiles Actions]
-* link:#policy-management[Policy Management]
+* link:#resource-policy-management[Resource Policy Management]
 * link:#policy-specification[Policy specification]
 * link:#assigning-policies-to-a-resource[Assigning policies to a resource]
 * link:#unassigning-policies-from-a-resource[Unassigning policies from a resource]
@@ -212,8 +212,8 @@ are available. These are:
 |=====================
 
 
-[[policy-management]]
-=== Policy Management
+[[resource-policy-management]]
+=== Resource Policy Management
 
 Policy management on resources can be done by POSTing *assign* and *unassign* actions to the policies or
 policy_profiles subcollection of resources. Policy management is available on the following primary collections:
