--- a/api/reference/providers.adoc
+++ b/api/reference/providers.adoc
@@ -50,6 +50,12 @@ POST /api/providers
 }
 ----
 
+[NOTE]
+====
+Please refer to the link:../appendices/resource_attributes.html#providers[Resource Attributes]
+page for a list of available attributes when creating Providers.
+====
+
 For example, creating a VmWare type provider:
 
 ----
@@ -76,19 +82,26 @@ If zone is not specified, the Default zone will be used.
 The *type* attribute specifies the supported provider class names.
 This list primarily includes:
 
-[cols="<",width="30%"]
+[cols="<",width="60%"]
 |===================================================
-| ManageIQ::Providers::Vmware::InfraManager
-| ManageIQ::Providers::Microsoft::InfraManager
-| ManageIQ::Providers::Redhat::InfraManager
-| ManageIQ::Providers::Openstack::InfraManager
 | ManageIQ::Providers::Amazon::CloudManager
-| ManageIQ::Providers::Azure::CloudManager
-| ManageIQ::Providers::Openstack::CloudManager
 | ManageIQ::Providers::Atomic::ContainerManager
+| ManageIQ::Providers::Azure::CloudManager
 | ManageIQ::Providers::Kubernetes::ContainerManager
+| ManageIQ::Providers::Microsoft::InfraManager
 | ManageIQ::Providers::Openshift::ContainerManager
+| ManageIQ::Providers::Openstack::InfraManager
+| ManageIQ::Providers::Openstack::CloudManager
+| ManageIQ::Providers::Redhat::InfraManager
+| ManageIQ::Providers::Vmware::InfraManager
 |===================================================
+
+[NOTE]
+====
+Please note that the provider *type* classes have changed in the appliance from earlier
+releases (_v2.0.0_ of the API). Please refer to the link:../appendices/provider_types.html[Provider Types]
+page for a mapping from the old to the new types.
+====
 
 [[specifying-credentials]]
 === Specifying Credentials
