--- a/api/reference/services.adoc
+++ b/api/reference/services.adoc
@@ -4,12 +4,12 @@
 
 Service management is provided via the following collections:
 
-[cols="<,<",options="header",]
+[cols="<,<",options="header",width="50%"]
 |==========================
 | Path | Description
 | /api/service_catalogs | Service Catalogs
 | /api/service_templates | Service Templates
-| /api/services | Service Templates
+| /api/services | Services
 | /api/service_requests | Service Requests
 |==========================
 
@@ -76,6 +76,12 @@ Optionally without the create action signature:
   ]
 }
 ----
+
+[NOTE]
+====
+Please refer to the link:../appendices/resource_attributes.html#service-catalogs[Resource Attributes]
+page for a list of available attributes when creating Service Catalogs.
+====
 
 [[editing-service-catalogs]]
 ==== Editing Service Catalogs
