--- a/api/reference/tagging.adoc
+++ b/api/reference/tagging.adoc
@@ -230,6 +230,7 @@ of resources. Tags can be managed as subcollections of the following primary col
 | /api/clusters
 | /api/services
 | /api/service_templates
+| /api/tenants
 | /api/vms
 |===========================
 
