--- a/api/appendices/quick_reference.adoc
+++ b/api/appendices/quick_reference.adoc
@@ -24,6 +24,7 @@ of the REST API.
 |Header |Value
 |Authorization |Basic base64_encoded(user:password)
 |X-Auth-Token |Token provided by /api/auth
+|X-MIQ-Group |Group to authorize externally authenticated user
 |Accept |application/json
 |Content-Type |application/json
 |==================================================
