--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -5,6 +5,21 @@
 [cols="1<,1<,1<,3<",options="header",]
 |=======================================================================
 |API Version |Entrypoints |Published |Description
+|*2.1.0* |/api, /api/v2.1.0 |November 2015 |CRUD on Tenants,
+CRUD on Categories and Tags,
+CRUD on User Roles,
+CRUD on Chargeback Rates,
+Tagging Tenants, Changing user password,
+Querying reports, importing and running reports,
+Querying service dialogs of service template and services,
+Querying pictures of services, service requests and service templates,
+Custom buttons and dialogs support on services and service templates,
+Ability to trigger custom actions on services,
+Setting ownership on Services, Vms and Templates,
+User group authorization,
+Additional Primary Collections: Features, Roles, Tenants,
+Service dialogs, Provision dialogs,
+Reports, Chargebacks, Rates, Categories, Tags
 |*2.0.0* |/api, /api/v2.0.0 |May 2015 |Parity with SOAP API,
 Support for Providers CRUD & Refresh action,
 VM Control Management,
