--- a/api/reference/collections.adoc
+++ b/api/reference/collections.adoc
@@ -16,31 +16,41 @@ Where :collection is one of the following:
 |Collection | Description
 |automation_requests | Automation Requests
 |availability_zones | Availability Zones
+|categories | Categories
+|chargebacks | Chargebacks
 |clusters | Clusters
 |conditions | Conditions
 |data_stores | Datastores
 |events | Events
+|features | Product Features
 |flavors | Flavors
 |groups | Groups
 |hosts | Hosts
+|pictures | Pictures
 |policies | Policies
 |policy_actions | Actions
 |policy_profiles | Policy Profiles
 |providers | Providers
+|provision_dialogs | Provisioning Dialogs
 |provision_requests | Provision Requests
+|rates | Chargeback Rates
+|reports | Reports
 |request_tasks | Request Tasks
 |requests | Requests
 |resource_pools | Resource Pools
+|results | Report Results
 |roles | Roles
 |security_groups | Security Groups
 |servers | EVM Servers
 |service_catalogs | Service Catalogs
+|service_dialogs | Service Dialogs
 |service_requests | Service Requests
 |service_templates | Service Templates
 |services | Services
 |tags | Tags
-|tasks | Request Tasks
+|tasks | Tasks
 |templates | Templates
+|tenants | Tenants
 |users | Users
 |vms | Virtual Machines
 |zones | Zones
