--- a/api/reference/providers.adoc
+++ b/api/reference/providers.adoc
@@ -60,7 +60,7 @@ POST /api/providers
 ----
 {
   "name" : "vCenter 5",
-  "type" : "EmsVmware",
+  "type" : "ManageIQ::Providers::Vmware::InfraManager",
   "hostname" : "my_vcenter_50",
   "ipaddress" : "192.168.150.1",
   "zone" :  { "href" : "http://localhost:3000/api/zone/1" },
@@ -77,13 +77,18 @@ The *type* attribute specifies the supported provider class names.
 This list primarily includes:
 
 [cols="<",width="30%"]
-|================
-| EmsRedhat
-| EmsVmware
-| EmsOpenstack
-| EmsKubernetes
-| etc.
-|================
+|===================================================
+| ManageIQ::Providers::Vmware::InfraManager
+| ManageIQ::Providers::Microsoft::InfraManager
+| ManageIQ::Providers::Redhat::InfraManager
+| ManageIQ::Providers::Openstack::InfraManager
+| ManageIQ::Providers::Amazon::CloudManager
+| ManageIQ::Providers::Azure::CloudManager
+| ManageIQ::Providers::Openstack::CloudManager
+| ManageIQ::Providers::Atomic::ContainerManager
+| ManageIQ::Providers::Kubernetes::ContainerManager
+| ManageIQ::Providers::Openshift::ContainerManager
+|===================================================
 
 [[specifying-credentials]]
 === Specifying Credentials
@@ -98,7 +103,7 @@ Single default credentials set:
 ----
 {
   "name" : "vCenter 50",
-  "type" : "EmsVmware",
+  "type" : "ManageIQ::Providers::Vmware::InfraManager",
   ...
   "credentials" :  {
     "userid" : "vc_admin",
@@ -113,7 +118,7 @@ Compound credentials set:
 ----
 {
   "name" : "RHEVM",
-  "type" : "EmsRedhat",
+  "type" : " ManageIQ::Providers::Redhat::InfraManager",
   ...
   "credentials" : [
      {
@@ -247,7 +252,7 @@ POST /api/providers?provider_class=provider
 [source,json]
 ----
 {
-  "type"      : "ProviderForeman",
+  "type"      : "ManageIQ::Providers::Foreman::Provider",
   "name"      : "new_foreman_111",
   "url"       : "100.200.300.111",
   "credentials" : {
