--- a/doc-Deployment_Planning_Guide/Security.adoc
+++ b/doc-Deployment_Planning_Guide/Security.adoc
@@ -25,3 +25,14 @@
 |CFME Appliance |DNS Server |UDP |  |53 |DNS Lookups
 |============================================================================================================
 
+=== Red Hat Enterprise Virtualization Ports Used by CloudForms Management Engine
+
+[width="100%",cols="3,3,2,1,1,2",options="header",]
+|=======================================================================
+|Initiator (CFME Role if applicable) |Receiver (CFME Role if applicable) |Application |TCP Port |UDP Port |Purpose/Reason 
+|CFME Appliance (SmartProxy) |RHEV-M Server |HTTPS |8443 |  |API communications to RHEV-M environment (Inventory, Operations, SmartProxy)
+|CFME Appliance (C&U) |RHEV-M Server |PostgreSQL |5432 |  |RHEV-M History Database (Database connectivity not enabled by default). See https://access.redhat.com/solutions/63277[How to access RHEV-M Postgres DB from remote machine.]
+|CFME Appliance |RHEVH Hosts or RHEL Hypervisors |SSH|22 |  |SSH connections
+|CFME Appliance |RHEVH Hosts or RHEL Hypervisors |DirectLUN |  |Direct LUN hook must be installed and enabled for embedded VM scanning on FC or iSCSI storage devices. Not a tcp/udp connection.
+|=======================================================================
+
