Adjusted titles in two of the installation guides.

--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/master.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/master.adoc
@@ -1,4 +1,4 @@
-= ⁠Installing CloudForms on Red Hat Enterprise Linux OpenStack Platfor
+= Installing CloudForms on Red Hat Enterprise Linux OpenStack Platform
 CloudForms Documentation Team <cloudforms-docs@redhat.com>
 :imagesdir: images
 :vernum: 4.0
