--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/master.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/master.adoc
@@ -1,4 +1,4 @@
-= ⁠Installing CloudForms on Red Hat Enterprise Virtualizatio
+= Installing CloudForms on Red Hat Enterprise Virtualization
 CloudForms Documentation Team <cloudforms-docs@redhat.com>
 :imagesdir: images
 :vernum: 4.0
