--- a/doc-Appliance_Hardening_Guide/UI_Password.adoc
+++ b/doc-Appliance_Hardening_Guide/UI_Password.adoc
@@ -1,24 +1,24 @@
 [[_chap_red_hat_cloudforms_security_guide_setting_the_password_for_the_administrative_user]]
 = Setting the Password for the Administrative User
 
-Red Hat CloudForms Management Engine uses a unique [literal]+admin+ user to control all functions in the appliance console and the web-based user interface.
-After installing the appliance, change the default password of the [literal]+admin+ to restrict administrative access to the appliance. 
+Red Hat CloudForms Management Engine uses a unique [literal]+admin+ user to control all functions in the web-based user interface.
+After installing the appliance, change the default password of the [literal]+admin+ to restrict administrative access to the appliance's UI.
 
-Changing the [literal]+admin+ password uses the same process as changing any standard user in the appliance. 
+Changing the [literal]+admin+ password uses the same process as changing any standard user in the appliance.
 
 .Procedure: Changing the admin Password
 . Access your appliance through your web browser and login
 . Navigate to menu:Configure[Configuration].
 . In the accordion tree on the left, click on [label]#Access Control#, then select the [label]#Administrator# under the [label]#Users# section.
-  This displays the details for the [literal]+admin+ user. 
-. On the details page, select menu:Configuration[Edit this user] from the toolbar. 
-. Enter a new password in the [label]#Change Password / Confirm Password# fields. 
-. Click [label]#Save# at the bottom of the page. 
-. Log out of the user interface. 
-. Test your new password by logging into the user interface. 
+  This displays the details for the [literal]+admin+ user.
+. On the details page, select menu:Configuration[Edit this user] from the toolbar.
+. Enter a new password in the [label]#Change Password / Confirm Password# fields.
+. Click [label]#Save# at the bottom of the page.
+. Log out of the user interface.
+. Test your new password by logging into the user interface.
 +
-Also test your new password in the appliance console. 
+Also test your new password in the appliance console.
 
 
 The Red Hat CloudForms Appliance now has a non-default [literal]+admin+ password.
-This restricts access to your appliance's administrative functions. 
+This restricts access to your appliance's administrative functions.
