--- a/doc-Appliance_Hardening_Guide/Updates.adoc
+++ b/doc-Appliance_Hardening_Guide/Updates.adoc
@@ -24,7 +24,7 @@ You need the following to register:
 * A Red Hat subscription that covers your product 
 
 .Procedure: Registering a CloudForms Management Engine Appliance
-. Log in to the Appliance as the [literal]+admin+ user. 
+. Log in to the Appliance as the [literal]+root+ user. 
 . Navigate to menu:Configure[Configuration]. Select [label]#Region# in the accordion menu and click the [label]#Red Hat Updates# tab. 
 . In [label]#Red Hat Software Updates#, click btn:[Edit Registration]. 
 . You can register the CloudForms Management Engine Appliance using one of three available options: 
