--- a/doc-Appliance_Hardening_Guide/SSL_Certs.adoc
+++ b/doc-Appliance_Hardening_Guide/SSL_Certs.adoc
@@ -3,7 +3,7 @@
 
 It is important to enhance the security of SSL communication of your appliances, which, depending on your setup, may include your database appliance.
 The appliance image ships with a default SSL certificate.
-It is recommended to replace this certificate with your own certificate, either signed by a trusted Certificate Authority (CA) or self-signed. 
+It is recommended to replace this certificate with your own certificate, either signed by a trusted Certificate Authority (CA) or self-signed.
 
 == Creating a Certificate Signing Request
 
@@ -14,14 +14,14 @@ The first step is to determine the host name of your appliance or database appli
 $ hostname
 ----
 
-The next step is to create a Certificate Signing Request (CSR) using the +openssl+ command: 
+The next step is to create a Certificate Signing Request (CSR) using the +openssl+ command:
 
 ----
 
 [root@ ~]# openssl req -new -newkey rsa:2048 -out appliance.csr -keyout appliance.key
 ----
 
-This command generates a 2048-bit RSA private key and asks for a passphrase for the key. 
+This command generates a 2048-bit RSA private key and asks for a passphrase for the key.
 
 ----
 
@@ -35,7 +35,7 @@ Verifying - Enter PEM pass phrase: **********
 
 The command then provides a questionnaire requesting certain details for the key.
 Fill out this questionnaire.
-Use the output of the +hostname+ command to specify the [literal]+Common Name+. 
+Use the output of the +hostname+ command to specify the [literal]+Common Name+.
 
 For example:
 
@@ -55,16 +55,16 @@ A challenge password []:
 An optional company name []:
 ----
 
-Running the command produces two files: 
+Running the command produces two files:
 
-* [path]_appliance.key_ - The private key 
-* [path]_appliance.csr_ - The Certificate Signing Request (CSR) 
+* [path]_appliance.key_ - The private key
+* [path]_appliance.csr_ - The Certificate Signing Request (CSR)
 
-At this stage, you would send the CSR to a trusted Certificate Authority (CA) and in return they would send you a signed certificate. 
+At this stage, you would send the CSR to a trusted Certificate Authority (CA) and in return they would send you a signed certificate.
 
 == Creating a Self-signed Certificate
 
-As an alternative to obtaining a signed certificate, you can use the [path]_appliance.key_ and [path]_appliance.csr_ files to create a self-signed certificate by running the following +openssl+ commands: 
+As an alternative to obtaining a signed certificate, you can use the [path]_appliance.key_ and [path]_appliance.csr_ files to create a self-signed certificate by running the following +openssl+ commands:
 
 ----
 
@@ -72,17 +72,17 @@ As an alternative to obtaining a signed certificate, you can use the [path]_appl
 [root@ ~]# openssl x509 -in appliance.csr -out server.cer -req -signkey server.cer.key -days 3650
 ----
 
-This produces two files: 
+This produces two files:
 
-* [path]_server.cer.key_ - The private key for your signed certificate 
-* [path]_server.cer_ - The self-signed certificate 
+* [path]_server.cer.key_ - The private key for your signed certificate
+* [path]_server.cer_ - The self-signed certificate
 
 [[_enabling_the_appliance_to_use_your_certificate]]
 == Enabling Your Certificate
 
-Despite whether you used a trusted CA or self-signed the certificate, you should now have your own certificate for your appliance. 
+Despite whether you used a trusted CA or self-signed the certificate, you should now have your own certificate for your appliance.
 
-Copy the certificate and key files to the certificate directory on the appliance: 
+Copy the certificate and key files to the certificate directory on the appliance:
 
 ----
 
@@ -90,19 +90,19 @@ Copy the certificate and key files to the certificate directory on the appliance
 [root@ ~]# cp ~/server.cer /var/www/miq/vmdb/certs/server.cer
 ----
 
-After the certificate and key files have been copied, restart the appliance: 
+After the certificate and key files have been copied, restart the appliance:
 
 ----
 
-[root@ ~]# service evmserverd restart
+[root@ ~]# systemctl restart evmserverd
 ----
 
-The appliance now uses your own certificate. 
+The appliance now uses your own certificate.
 
 If your environment consists of multiple appliances connecting to a single database appliance, you can use your certificate and key files to set up SSL for the database connection.
 For more information, see <<_chap_red_hat_cloudforms_security_guide_setting_ssl_for_the_database_appliance>>.
 
 IMPORTANT: Updates from the Red Hat Content Delivery Network might overwrite these certificate and key files.
-Make sure to copy your own certificate and key files to the certificate directory after performing an update to your appliance. 
+Make sure to copy your own certificate and key files to the certificate directory after performing an update to your appliance.
 
-NOTE: See also the following article for information on replacing SSL certificates in CloudForms Management Engine: https://access.redhat.com/articles/449033. 
+NOTE: See also the following article for information on replacing SSL certificates in CloudForms Management Engine: https://access.redhat.com/articles/449033.
