Fixing firewall rule to permanent

--- a/doc-Appliance_Hardening_Guide/Firewall.adoc
+++ b/doc-Appliance_Hardening_Guide/Firewall.adoc
@@ -15,7 +15,7 @@ In such situations, use the following method:
   For example, to open the LDAP port:
 +
 ----
-[root@ ~]# firewall-cmd --zone=public --add-port=389/tcp
+[root@ ~]# firewall-cmd --zone=public --permanent --add-port=389/tcp
 ----
 
 The following table lists the appliance's main services and their respective ports.
